results/SVCOMP/4-shot/log-ExSymExe21-2024_03_18_19_16_54.txt
class Main {
  static int field;
  static int field2;

  //@ requires x == 3;
  //@ requires 0 <= z && 0 <= r;
  //@ ensures \result <==> (r >= 99 && x >= z);
  public static boolean f() {
    int x = 3;

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires 0 <= x && 0 <= z && 0 <= r;
  //@ ensures \result <==> (r >= 99 && x >= z);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:5: error: cannot find symbol
  //@ requires x == 3;
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ requires 0 <= z && 0 <= r;
                    ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ requires 0 <= z && 0 <= r;
                              ^
  symbol:   variable r
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures \result <==> (r >= 99 && x >= z);
                            ^
  symbol:   variable r
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures \result <==> (r >= 99 && x >= z);
                                       ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures \result <==> (r >= 99 && x >= z);
                                            ^
  symbol:   variable z
  location: class Main
6 errors

